stampa film richiesti prova

--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
 
  <script id="films-template" type="text/x-handlebars-template">
 
-    <li class="day"="{{dateComplete}}">{{day}} {{month}}<div class="holidayType"></div></li>
+    <li>
+      <h3>{{title}}</h3>
+      <h4>Titolo originale{{title_original}}</h4>
+      <p>Lingua originale{{lang}}</p>
+      <p>Media voto: <stro>{{vote}}</stro></p>
+    </li>
 
  </script>
 
