quasi finito bandire-mancano bandiere

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://momentjs.com/downloads/moment.js" charset="utf-8"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.2/handlebars.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
 </head>
 <body>
   <div class="wrapper">
@@ -31,9 +32,10 @@
  <script id="films-template" type="text/x-handlebars-template">
     <li>
       <h3>Titolo: {{title}}</h3>
-      <h4>Titolo originale: {{title_original}}</h4>
+      <h4>Titolo originale: {{original_title}}</h4>
       <p>Lingua originale: {{lang}}</p>
-      <p>Media voto: <strong>{{vote}}</strong></p>
+      <p>Media voto: <strong>{{{vote}}}</strong></p>
+
     </li>
  </script>
 
