--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
     </div>
 
    </header>
-
+   <h2>Lista Film</h2>
    <ul id="list-films">
+
+   </ul>
+
+   <h2>Lista Telefilm</h2>
+   <ul id="list-telefilms">
 
    </ul>
  </div>
@@ -33,7 +38,18 @@
     <li>
       <h3>Titolo: {{title}}</h3>
       <h4>Titolo originale: {{original_title}}</h4>
-      <p>Lingua originale: {{lang}}</p>
+      <p>Lingua originale: <img class="dimension"src="{{lang}}" alt=""></p>
+      <p>Media voto: <strong>{{{vote}}}</strong></p>
+      
+
+    </li>
+ </script>
+
+ <script id="telefilms-template" type="text/x-handlebars-template">
+    <li>
+      <h3>Titolo: {{name}}</h3>
+      <h4>Titolo originale: {{original_name}}</h4>
+      <p>Lingua originale: <img class="dimension"src="{{lang}}" alt=""></p>
       <p>Media voto: <strong>{{{vote}}}</strong></p>
 
     </li>
